remove checkour doc and compile doc cmake options. doc is now managed as a separated module hosted in a dedicated git repository

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,65 +146,12 @@ set_property(GLOBAL PROPERTY AUTOGEN_TARGETS_FOLDER "Generated")
 
 ### COMPILATION OPTIONS MANAGEMENT ####################################################################################
 
-# doc and translations options
-
-option(DIGIKAMSC_CHECKOUT_DOC            "Checkout documentation translations files from git repositories (default=OFF)"          OFF)
 option(DIGIKAMSC_COMPILE_PO              "Build translations files (default=ON)"                                                  ON)
-option(DIGIKAMSC_COMPILE_DOC             "Build handbook files (default=ON)"                                                      ON)
 option(DIGIKAMSC_COMPILE_DIGIKAM         "Build digiKam core (default=ON)"                                                        ON)
 
 #######################################################################################################################
 
-if(DIGIKAMSC_CHECKOUT_DOC)
-
-    find_package(Ruby)
-    find_package(Subversion)
-
-    if(RUBY_EXECUTABLE AND Subversion_FOUND)
-
-        if(DIGIKAMSC_CHECKOUT_DOC)
-
-            message(STATUS "Extract documentation translation files from git repositories. Please wait, it can take a while...")
-            message(STATUS "NOTE: (u) want mean uncomplete translations files, which will be removed from compilation.")
-
-            execute_process(COMMAND ${RUBY_EXECUTABLE} "${CMAKE_SOURCE_DIR}/project/release/fetch_l10n_doc.rb"
-                            WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
-
-            message(STATUS "Documentation translation files extraction done.")
-
-        endif()
-
-    else()
-
-        message(FATAL_ERROR "Could not find Ruby or Subversion to extract translation files")
-
-    endif()
-
-endif()
-
-if(DIGIKAMSC_COMPILE_PO AND NOT EXISTS ${CMAKE_SOURCE_DIR}/po/)
-
-    message(STATUS "Application translations directory is missing. Compilation of application translations is disabled...")
-
-    set(DIGIKAMSC_COMPILE_PO OFF)
-
-endif()
-
-if(DIGIKAMSC_COMPILE_DOC AND NOT EXISTS ${CMAKE_SOURCE_DIR}/doc/)
-
-    message(STATUS "Main one documentation directory is missing. Compilation of documentation is disabled...")
-    set(DIGIKAMSC_COMPILE_DOC OFF)
-
-endif()
-
-if(NOT EXISTS ${CMAKE_SOURCE_DIR}/doc-translated/)
-
-    message(STATUS "Documentation translations directory is missing.")
-    message(STATUS "You can use DIGIKAMSC_CHECKOUT_DOC option to extract doc i18n files from git repositories.")
-
-endif()
-
-if(DIGIKAMSC_COMPILE_PO OR DIGIKAMSC_COMPILE_DOC)
+if(DIGIKAMSC_COMPILE_PO)
     set_property(GLOBAL PROPERTY ALLOW_DUPLICATE_CUSTOM_TARGETS 1)
 endif()
 
@@ -229,22 +176,10 @@ else()
     message(STATUS     "${PROJECT_NAME} will be compiled....................... NO")
 endif()
 
-if(DIGIKAMSC_CHECKOUT_DOC)
-    message(STATUS "Extract documentation translations files....... YES")
-else()
-    message(STATUS "Extract documentation translations files....... NO")
-endif()
-
 if(DIGIKAMSC_COMPILE_PO)
     message(STATUS "Translations will be compiled.................. YES")
 else()
     message(STATUS "Translations will be compiled.................. NO")
-endif()
-
-if(DIGIKAMSC_COMPILE_DOC)
-    message(STATUS "Handbooks will be compiled..................... YES")
-else()
-    message(STATUS "Handbooks will be compiled..................... NO")
 endif()
 
 if(BUILD_TESTING)
@@ -259,19 +194,10 @@ if(DIGIKAMSC_COMPILE_DIGIKAM)
     add_subdirectory(core)
 endif()
 
-if(DIGIKAMSC_COMPILE_PO OR DIGIKAMSC_COMPILE_DOC)
-    find_package(Gettext REQUIRED)
-endif()
-
 if(DIGIKAMSC_COMPILE_PO)
+    find_package(Gettext REQUIRED)
     find_package(KF5I18n NO_MODULE)
     ki18n_install(po)
-endif()
-
-if(DIGIKAMSC_COMPILE_DOC)
-    find_package(KF5 ${KF5_MIN_VERSION} REQUIRED COMPONENTS DocTools)
-    ECM_OPTIONAL_ADD_SUBDIRECTORY(doc)
-    ECM_OPTIONAL_ADD_SUBDIRECTORY(doc-translated)
 endif()
 
 if(BUILD_TESTING)
